# cpp-extension-template

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  project.yml  requirements.txt  tasks.py
.devcontainer/: Dockerfile
.devcontainer/linux-arm64/: devcontainer.json
.devcontainer/linux-x86-64/: devcontainer.json
.github/workflows/: build.yml
CMake/: FindSwitchboardSDK.cmake  SwitchboardSDK.cmake
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
demos/: CMakeLists.txt
demos/processor-offline/: CMakeLists.txt  ProcessorOfflineDemo.json  main.cpp
demos/processor-realtime/: CMakeLists.txt  ProcessorRealtimeDemo.json  main.cpp
demos/sink-offline/: CMakeLists.txt  SinkOfflineDemo.json  main.cpp
demos/sink-realtime/: CMakeLists.txt  SinkRealtimeDemo.json  main.cpp
demos/source-offline/: CMakeLists.txt  SourceOfflineDemo.json  main.cpp
demos/source-realtime/: CMakeLists.txt  SourceRealtimeDemo.json  main.cpp
include/: ExampleDSPExtension.hpp
jvm/: .gitignore  settings.gradle
sample-app/ios/: ContentView.swift  ExampleDSPSampleApp.swift
sample-app/ios/Processor/: ProcessorNodeExample.swift  ProcessorNodeExampleView.swift
sample-app/ios/Sink/: SinkNodeExample.swift  SinkNodeExampleView.swift
sample-app/ios/Source/: SourceNodeExample.swift  SourceNodeExampleView.swift
scripts/: build-android.sh  build-ios.sh  build-jvm.sh  build-macos.sh  build-web.sh  build.sh  clean-gradle.sh  clean.sh  rename.sh  setup.sh
src/all/: CMakeLists.txt  ExampleDSPExtension.cpp  ExampleDSPExtension.hpp  ExampleDSPNodeFactory.cpp  ExampleDSPNodeFactory.hpp  ExtensionTemplateExtension.cpp  ExtensionTemplateExtension.hpp
src/all/AudioGraphNodes/Processor/: ExampleProcessorNode.cpp  ExampleProcessorNode.hpp
src/all/AudioGraphNodes/Sink/: ExampleSinkNode.cpp  ExampleSinkNode.hpp
src/all/AudioGraphNodes/Source/: ExampleSourceNode.cpp  ExampleSourceNode.hpp
src/all/Nodes/: CMakeLists.txt  ExampleProcessorNode.cpp  ExampleProcessorNode.hpp  ExampleSinkNode.cpp  ExampleSinkNode.hpp  ExampleSourceNode.cpp  ExampleSourceNode.hpp
src/all/Nodes/ExampleProcessor/: CMakeLists.txt  ExampleProcessorNode.cpp  ExampleProcessorNode.hpp
src/all/Nodes/ExampleSink/: CMakeLists.txt  ExampleSinkNode.cpp  ExampleSinkNode.hpp
src/all/Nodes/ExampleSource/: CMakeLists.txt  ExampleSourceNode.cpp  ExampleSourceNode.hpp
src/android/: CMakeLists.txt  build.gradle
src/apple/: SwitchboardExampleDSP.h
src/apple/AudioGraphNodes/Processor/: SBExampleProcessorNode.h  SBExampleProcessorNode.mm
src/apple/AudioGraphNodes/Sink/: SBExampleSinkNode.h  SBExampleSinkNode.mm
src/apple/AudioGraphNodes/Source/: SBExampleSourceNode.h  SBExampleSourceNode.mm
src/jvm/: CMakeLists.txt  build.gradle
src/jvm/src/main/cpp/: CMakeLists.txt  SBExampleDSPExtension.cpp
src/jvm/src/main/cpp/AudioGraphNodes/: SBExampleSourceNode.cpp
src/jvm/src/main/java/com/synervoz/switchboardexampledsp/: ExampleDSPExtension.kt
src/jvm/src/main/java/com/synervoz/switchboardexampledsp/audiographnodes/: ExampleSourceNode.kt  Nodes.kt
src/jvm/src/test/java/com/synervoz/switchboardexampledsp/tests/: ExampleSourceNodeTest.kt
src/jvm/src/test/java/com/synervoz/switchboardexampledsp/tests/utils/: ExampleDSPTest.kt
src/web/: CMakeLists.txt
