cmake_minimum_required(VERSION 3.13 FATAL_ERROR)

project(SwitchboardExampleDSP VERSION 1.0.0 LANGUAGES CXX)

set(TARGET_NAME SwitchboardExampleDSP)

set(PROJECT_ROOT ../..)
set(EXTENSION_DIR ${PROJECT_ROOT})
set(LIBS_DIR ${EXTENSION_DIR}/libs)
set(SWITCHBOARD_SDK_DIR ${LIBS_DIR}/switchboard-sdk)

set(EXTENSION_SRC_ALL ${EXTENSION_DIR}/src/all)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_C_FLAGS "")
set(CMAKE_CXX_FLAGS "")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTARGET_OS_WEB")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_CONFIG_H")

set(EMCC_FLAGS "-O3 -std=c++17 --no-entry -s WASM=1 -DTARGET_OS_WEB -DNDEBUG -s ERROR_ON_UNDEFINED_SYMBOLS=0")
set(EMCC_DEBUG_FLAGS "-fno-inline-functions -g")
set(CMAKE_REQUIRED_FLAGS "${EMCC_FLAGS}")

add_executable(${TARGET_NAME})
set(CMAKE_EXECUTABLE_SUFFIX ".wasm")
set_target_properties(${TARGET_NAME} PROPERTIES LINK_FLAGS "${EMCC_FLAGS}")

add_subdirectory("${PROJECT_ROOT}/src/all" "all")